address diplay on mobile (issue #1)

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -107,6 +107,7 @@ header {
   border-bottom-style: solid;
   border-bottom-width: 3px;
   border-bottom-color: #24bc26;
+  padding-bottom: 8px;
 }
 
 hr {
